--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+server.error.include-exception=false
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+
+nfeeds.bl.routerin.url="http://localhost:8080/api/v1/"
